# app/Http/Controllers/API/BedController.php
@@ -10,6 +10,12 @@ use App\Models\Bed;
 use OpenApi\Annotations as OA;
 
 
+/**
+ * Class BedController,
+ * 
+ * @author Victorio <victorio.422023022@civitas.ukrida.ac.id>
+ */
+
 class BedController extends Controller
 {
     /**
@@ -55,9 +61,9 @@ class BedController extends Controller
      *         )
      *     ),
      *     @OA\Parameter(
-     *         name="_publisher",
+     *         name="_type",
      *         in="query",
-     *         description="search by publisher like name",
+     *         description="search by type like name",
      *         required=false,
      *         @OA\Schema(
      *             type="string",
@@ -85,26 +91,27 @@ class BedController extends Controller
             $offset               = ($page?($page-1)*$limit:0);
             $data['products']     = Bed::whereRaw('1 = 1');
             
+            
             if($request->get('_search')){
-                $data['products'] = $data['products']->whereRaw('(LOWER(title) LIKE "%'.strtolower($request->get('_search')).'%" OR LOWER(author) LIKE "%'.strtolower($request->get('_search')).'%")');
+                $data['products'] = $data['products']->whereRaw('(LOWER(product_name) LIKE "%'.strtolower($request->get('_search')).'%")');
             }
-            if($request->get('_publisher')){
-                $data['products'] = $data['products']->whereRaw('LOWER(publisher) = "'.strtolower($request->get('_publisher')).'"');
+            if($request->get('_type')){
+                $data['products'] = $data['products']->whereRaw('LOWER(type) = "'.strtolower($request->get('_type')).'"');
             }
             if($request->get('_sort_by')){
             switch ($request->get('_sort_by')) {
                 default:
-                case 'latest_publication':
-                $data['products'] = $data['products']->orderBy('publication_year','DESC');
+                case 'first_added':
+                $data['products'] = $data['products']->orderBy('id','ASC');
                 break;
                 case 'latest_added':
                 $data['products'] = $data['products']->orderBy('created_at','DESC');
                 break;
-                case 'title_asc':
-                $data['products'] = $data['products']->orderBy('title','ASC');
+                case 'product_name_asc':
+                $data['products'] = $data['products']->orderBy('product_name','ASC');
                 break;
-                case 'title_desc':
-                $data['products'] = $data['products']->orderBy('title','DESC');
+                case 'product_name_desc':
+                $data['products'] = $data['products']->orderBy('product_name','DESC');
                 break;
                 case 'price_asc':
                 $data['products'] = $data['products']->orderBy('price','ASC');
@@ -116,7 +123,6 @@ class BedController extends Controller
             }
             $data['products_count_total']   = $data['products']->count();
             $data['products']               = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
-            // $data['products_raw_sql']       = $data['products']->toSql();
             $data['products']               = $data['products']->get();
             $data['products_count_start']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
             $data['products_count_end']     = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
@@ -148,11 +154,7 @@ class BedController extends Controller
     *         description="Request body description",
     *         @OA\JsonContent(
     *             ref="#/components/schemas/Bed",
-    *             example={"title": "Rich Dad Poor Dad: What the Rich Teach Their Kids About Money That the Poor and Middle Class Do Not!", "author": "Robert T. Kiyosaki dengan Sharon Lechter", "publisher": "Plata Publishing", "publication_year": "2011", 
-    *                      "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/book/1482170055i/33511107.jpg", 
-    *                      "description": "Rich Dad Poor Dad adalah buku yang mengubah cara orang memandang uang dan investasi. Robert T. Kiyosaki menceritakan pengalamannya dibesarkan oleh dua 
-    *                        ayah—ayah kandungnya yang miskin dan ayah angkatnya yang kaya—dan pelajaran yang dia pelajari dari keduanya. Buku ini menekankan pentingnya literasi finansial, investasi, dan pengelolaan keuangan yang bijak. Kiyosaki mengajak pembaca untuk berpikir kritis tentang bagaimana mereka dapat mencapai kebebasan finansial melalui pendidikan dan pengambilan keputusan yang tepat.", 
-    *                      "price": 204000}
+    *             example={"product_name": "kursi 160x200 ","brand": "Informa","type": "Kasur","cover": "https://res.cloudinary.com/ruparupa-com/image/upload/l_2.1:c5f05d:8cb583/w_738,h_738/f_auto,q_auto:eco/v1690873564/Products/10327678_3.jpg","description": "Struktur per pada kasur dirancang agar memberi area tidur yang nyaman dan independen saat digunakan oleh dua orang. Beban pun akan tersebar ke seluruh sisi kasur, tanpa menimbulkan bunyi berisik dan per akan dengan mudah kembali ke posisi semula. Kasur ini juga dilengkapi bantal dan guling berbahan dasar chopped memory foam dengan cover yang bisa dilepas dan dicuci. Memerhatikan unsur higienitas dan efisiensi, kasur beserta bantal dan guling akan divakum dan dikemas dalam kotak.","price": 3099000}
     *         ),
     *     ),
     *     security={{"passport_token_ready":{},"passport":{}}}
@@ -163,8 +165,8 @@ class BedController extends Controller
     {
         try {
             $validator = Validator::make($request->all(), [
-                'title'  => 'required|unique:books',
-                'author'  => 'required|max:100',
+                'product_name'  => 'required|unique:beds',
+                'brand'  => 'required|max:100',
             ]); 
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->messages()->first());
@@ -260,11 +262,7 @@ class BedController extends Controller
      *         description="Request body description",
      *         @OA\JsonContent(
      *             ref="#/components/schemas/Bed",
-     *             example={"title": "Rich Dad Poor Dad: What the Rich Teach Their Kids About Money That the Poor and Middle Class Do Not!", "author": "Robert T. Kiyosaki dengan Sharon Lechter", "publisher": "Plata Publishing", "publication_year": "2011", 
-    *                      "cover": "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/book/1482170055i/33511107.jpg", 
-    *                      "description": "Rich Dad Poor Dad adalah buku yang mengubah cara orang memandang uang dan investasi. Robert T. Kiyosaki menceritakan pengalamannya dibesarkan oleh dua 
-    *                        ayah—ayah kandungnya yang miskin dan ayah angkatnya yang kaya—dan pelajaran yang dia pelajari dari keduanya. Buku ini menekankan pentingnya literasi finansial, investasi, dan pengelolaan keuangan yang bijak. Kiyosaki mengajak pembaca untuk berpikir kritis tentang bagaimana mereka dapat mencapai kebebasan finansial melalui pendidikan dan pengambilan keputusan yang tepat.", 
-    *                      "price": 204000}
+     *             example={"product_name": "kursi 160x200 ","brand": "Informa","type": "Kasur","cover": "https://res.cloudinary.com/ruparupa-com/image/upload/l_2.1:c5f05d:8cb583/w_738,h_738/f_auto,q_auto:eco/v1690873564/Products/10327678_3.jpg","description": "Struktur per pada kasur dirancang agar memberi area tidur yang nyaman dan independen saat digunakan oleh dua orang. Beban pun akan tersebar ke seluruh sisi kasur, tanpa menimbulkan bunyi berisik dan per akan dengan mudah kembali ke posisi semula. Kasur ini juga dilengkapi bantal dan guling berbahan dasar chopped memory foam dengan cover yang bisa dilepas dan dicuci. Memerhatikan unsur higienitas dan efisiensi, kasur beserta bantal dan guling akan divakum dan dikemas dalam kotak.","price": 3099000}
      *         ),
      *     ),
      *     security={{"passport_token_ready":{},"passport":{}}}
@@ -279,8 +277,8 @@ class BedController extends Controller
 
         try {
             $validator = Validator::make($request->all(), [
-                'title'  => 'required|unique:beds',
-                'author'  => 'required|max:100',
+                'product_name'  => 'required|unique:beds',
+                'brand'  => 'required|max:100',
             ]); 
             if ($validator->fails()) {
                 throw new HttpException(400, $validator->messages()->first());
