# resources/views/pages/plp.blade.php
@@ -10,23 +10,19 @@
                 <div class="col-lg-3 col-md-3 order-md-1 order-2  small-mt__40">
                     <div class="shop-widget widget-shop-publishers mt-3">
                         <div class="product-filter">
-                            <h6 class="mb-20">publishers</h6>
-                            <select class="_filter form-select form-select-sm" name="_publisher" onchange="getData()">
+                            <h6 class="mb-20">Type</h6>
+                            <select class="_filter form-select form-select-sm" name="_type" onchange="getData()">
                                 <option value="" selected>All</option>
-                                <option value="putnam">Putnam</option>
-                                <option value="hariman house">Hariman House</option>
-                                <option value="balai pustaka">Balai Pustaka</option>
-                                <option value="lentera dipantara">Lentera Dipantara</option>
-                                <option value="pan books">Pan Books</option>
-                                <option value="firefly books">Firefly Books</option>
-                                <option value="gramedia">Gramedia</option>
-                                <option value="scholastic">Scholastic</option>
-                                <option value="harper">Harper</option>
-                                <option value="dk children">DK Children</option>
-                                <option value="bentang pustaka">Bentang Pustaka</option>
-                                <option value="gagas media">Gagas Media</option>
-                                <option value="grasindo">Grasindo</option>
-                                <option value="marjin kiri">Marjin Kiri</option>
+                                <option value="Kasur">Kasur</option>
+                                <option value="Kloset">Kloset</option>
+                                <option value="Handle Kamar Mandi">Handle Kamar Mandi</option>
+                                <option value="Handuk">Handuk</option>
+                                <option value="Seprai">Seprai</option>
+                                <option value="Bed Cover">Bed Cover</option>
+                                <option value="Shower">Shower</option>
+                                <option value="Bantal">Bantal</option>
+                                <option value="Tempat Sabun">Tempat Sabun</option>
+                                <option value="Tempat Sikat Gigi">Tempat Sikat Gigi </option>
                             </select>
                         </div>
                     </div>
@@ -47,12 +43,12 @@
                     <!-- Product Filter -->
                     <div class="shop-widget">
                         <div class="product-filter widget-price">
-                            <h6 class="mb-20">Price</h6>
+                            <h6 class="mb-20">Harga</h6>
                             <ul class="widget-nav-list">
-                                <li><a href="#">Under IDR 100K</a></li>
+                                <li><a href="#">Dibawah IDR 100K</a></li>
                                 <li><a href="#">IDR 100-500K</a></li>
-                                <li><a href="#">IDR 501-1000K</a></li>
-                                <li><a href="#">Above IDR 1000K</a></li>
+                                <li><a href="#">IDR 500-1000K</a></li>
+                                <li><a href="#">Diatas IDR 1000K</a></li>
                             </ul>
                         </div>
                     </div>
@@ -62,24 +58,22 @@
                         <div class="product-filter">
                             <h6 class="mb-20">Tags</h6>
                             <div class="blog-tagcloud">
-                                <a href="#" class="selected">Book</a>
-                                <a href="#">EBook</a>
+                                <a href="#" class="selected">Kasur</a>
+                                <a href="#">Hangat</a>
                                 <a href="#">Best Seller</a>
-                                <a href="#">Fiction</a>
-                                <a href="#">Education</a>
-                                <a href="#">Literature</a>
-                                <a href="#">Classics</a>
-                                <a href="#">Real Event</a>
-                                <a href="#">Young Adult</a>
-                                <a href="#">Religion</a>
-                                <a href="#">Health</a>
-                                <a href="#">Comic</a>
-                                <a href="#">Horror</a>
-                                <a href="#">Poem</a>
-                                <a href="#">Filmed</a>
-                                <a href="#">Encyclopedia</a>
-                                <a href="#">In English</a>
-                                <a href="#">In Indonesian</a>
+                                <a href="#">Aksesoris</a>
+                                <a href="#">Lembut</a>
+                                <a href="#">Mikrofiber</a>
+                                <a href="#">Bantal</a>
+                                <a href="#">Halus</a>
+                                <a href="#">Lembut </a>
+                                <a href="#">Handuk</a>
+                                <a href="#">Guling</a>
+                                <a href="#">Mewah</a>
+                                <a href="#">Shower</a>
+                                <a href="#">Bed Cover</a>
+                                <a href="#">Aluminium</a>
+                                <a href="#">Anti Karat</a>
                             </div>  
                         </div>
                     </div>
@@ -96,9 +90,8 @@
                                 </div>
                                 <div class="shop-toolbar__item ">
                                     <select class="_filter form-select form-select-sm" name="_sort_by" onchange="getData()">
-                                        <option value="title_asc">Sort by A-Z</option>
-                                        <option value="title_desc">Sort by Z-A</option>
-                                        <option value="latest_publication">Sort by latest</option>
+                                        <option value="product_name_asc">Sort by A-Z</option>
+                                        <option value="product_name_desc">Sort by Z-A</option>
                                         <option value="latest_added">Sort by time added</option>
                                         <option value="price_asc">Sort by price: low to high</option>
                                         <option value="price_desc">Sort by price: high to low</option>
@@ -107,11 +100,11 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-4">
-                            <div class="header-right search">
+                            <div class="header-right-search">
                                 <div class="header-search-box">
-                                    <input class="filter search-field" name="search" type="text" 
+                                    <input class="_filter search-field" name="_search" type="text" 
                                             onkeypress="getDataOnEnter(event)" 
-                                            placeholder="Search by title or series...">
+                                            placeholder="Search by product name">
                                     <button class="search-icon"><i class="icon-magnifier"></i></button>
                                 </div>
                             </div>
